@@ -2382,46 +2382,3 @@ vips_matload( const char *filename, VipsImage **out, ... )
 
 	return( result );
 }
-
-/**
- * vips_dzsave:
- * @in: image to save 
- * @dirname: directory to save to 
- * @...: %NULL-terminated list of optional named arguments
- *
- * Optional arguments:
- *
- * @suffix: suffix for tile tiles (default ".jpg")
- * @overlap; set tile overlap
- * @tile_width; set tile size
- * @tile_height; set tile size
- *
- * Save an image to a deep zoom - style directory tree.
- *
- * The image is shrunk in a series of x2 reductions until it fits within a
- * tile. Each layer is written out to a separate subdirectory of @dirname,
- * with directory "0" holding the smallest, single tile image.
- *
- * Each tile is written as a separate file named as "@x_@y@suffix", where @x
- * and @y are the tile coordinates, with (0, 0) as the top-left tile.
- *
- * You can set @suffix to something like ".jpg[Q=85]" to set the tile write
- * options. 
- *
- * See also: vips_tiffsave().
- *
- * Returns: 0 on success, -1 on error.
- */
-int
-vips_dzsave( VipsImage *in, const char *dirname, ... )
-{
-	va_list ap;
-	int result;
-
-	va_start( ap, dirname );
-	result = vips_call_split( "dzsave", ap, in, dirname ); 
-	va_end( ap );
-
-	return( result );
-}
-
