@@ -5,6 +5,7 @@
 - wrap VipsInterpolate for C++
 - so affinei and affinei_all appear in Python
 - be more cautious enabling YCbCr mode in tiff write
+- add "DEPRECATED" flag to arguments
 
 20/7/12 started 7.30.0
 - support "rs" mode in vips7
